WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56599
REGRESSION(81374, 81384): editing/deleting/5206311-1.html hits assertion on non-Mac platforms
https://bugs.webkit.org/show_bug.cgi?id=56599
Summary
REGRESSION(81374, 81384): editing/deleting/5206311-1.html hits assertion on n...
Ryosuke Niwa
Reported
2011-03-17 15:03:22 PDT
This assertion failure only occurs on non-Mac platforms.
Attachments
Patch
(2.46 KB, patch)
2011-03-17 22:27 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Patch
(5.53 KB, patch)
2011-03-17 22:39 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
updated Chromium test_expectations.txt
(5.51 KB, patch)
2011-03-18 11:20 PDT
,
Ryosuke Niwa
eric
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2011-03-17 15:21:35 PDT
Committed
r81397
: <
http://trac.webkit.org/changeset/81397
>
Adam Roben (:aroben)
Comment 2
2011-03-17 22:07:22 PDT
Now editing/deleting/5206311-2.html is asserting. It seems an earlier test is to blame.
Ryosuke Niwa
Comment 3
2011-03-17 22:27:22 PDT
Created
attachment 86135
[details]
Patch
Adam Roben (:aroben)
Comment 4
2011-03-17 22:29:55 PDT
Comment on
attachment 86135
[details]
Patch What about removing the test from the Skipped files?
Ryosuke Niwa
Comment 5
2011-03-17 22:35:23 PDT
(In reply to
comment #4
)
> (From update of
attachment 86135
[details]
) > What about removing the test from the Skipped files?
Oops, let me do that.
Ryosuke Niwa
Comment 6
2011-03-17 22:39:47 PDT
Created
attachment 86136
[details]
Patch
Adam Roben (:aroben)
Comment 7
2011-03-17 22:43:43 PDT
Tried skipping the previous test (5168598.html) on Windows instead Committed
r81444
: <
http://trac.webkit.org/changeset/81444
>
Ryosuke Niwa
Comment 8
2011-03-17 22:58:26 PDT
(In reply to
comment #6
)
> Created an attachment (id=86136) [details] > Patch
I'm not going to fix the purple EWSs as removing lines from Skipped / text_expectations.txt is bound to encounter some conflicts.
Adam Roben (:aroben)
Comment 9
2011-03-17 23:56:58 PDT
(In reply to
comment #7
)
> Tried skipping the previous test (5168598.html) on Windows instead > > Committed
r81444
: <
http://trac.webkit.org/changeset/81444
>
This seems to have made the Windows XP bot stop asserting. So it seems 5168598.html is the problem.
Alexander Pavlov (apavlov)
Comment 10
2011-03-18 07:11:11 PDT
The failure is now occurring on all DEBUG Chromium platforms (the faulty revision range is 81379:81398), I'm suppressing them now.
Ryosuke Niwa
Comment 11
2011-03-18 09:58:53 PDT
(In reply to
comment #9
)
> (In reply to
comment #7
) > > Tried skipping the previous test (5168598.html) on Windows instead > > > > Committed
r81444
: <
http://trac.webkit.org/changeset/81444
> > > This seems to have made the Windows XP bot stop asserting. So it seems 5168598.html is the problem.
(In reply to
comment #10
)
> The failure is now occurring on all DEBUG Chromium platforms (the faulty revision range is 81379:81398), I'm suppressing them now.
It seems like there are some flakiness on the bot but it shouldn't affect the correctness of my patch.
Ryosuke Niwa
Comment 12
2011-03-18 10:06:32 PDT
(In reply to
comment #9
)
> This seems to have made the Windows XP bot stop asserting. So it seems 5168598.html is the problem.
There is some flakiness in the tests that adds hyper links. Maybe there's some bug in the code that figures out visited-ness(?) of a URL.
Ryosuke Niwa
Comment 13
2011-03-18 11:20:10 PDT
Created
attachment 86182
[details]
updated Chromium test_expectations.txt
Eric Seidel (no email)
Comment 14
2011-03-18 14:21:51 PDT
Comment on
attachment 86182
[details]
updated Chromium test_expectations.txt OK.
Ryosuke Niwa
Comment 15
2011-03-18 15:01:28 PDT
Thanks for the review!
Ryosuke Niwa
Comment 16
2011-03-18 15:20:18 PDT
Committed
r81518
: <
http://trac.webkit.org/changeset/81518
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug